NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.35                        (2021-06-21)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.34                        (2021-06-09)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.33.2                      (2021-06-04)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.33.1                      (2021-04-27)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.33                        (2021-04-26)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.32                        (2021-04-26)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.31                        (2021-04-21)
----------------------------------------------------------------------
 * Supported new model
 * Fixed the problem that epson-escpr-wrapper would crash 
   when cupsRasterReadHeader failed.

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.30.1                      (2021-04-16)