@@ -1,10 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.33-1lsb3.2.i486.rpm 2788356 BLAKE2B 2d3a79faf1f072658ce2a7cc8c9ffba0d2833aa27e86c8f4977651ebddc588c24f33f82f0ac72b9c10fd6d67387ed77373531bc44d95c751702554a17274d41b SHA512 9d6a27db74ff6630a518dd6bba88ac84ecd63592dedfa6f61a17888cad5718fdfebc637ce8b2081af3a10cef314a56f1a0fce64ce4f56a66dc52ff4d1c4f99c0
-DIST epson-inkjet-printer-escpr2-1.1.33-1lsb3.2.x86_64.rpm 2787800 BLAKE2B 98731bf1a6026c307dad4ae6855523a448094a8ee88a07d223380b7b24bf3992dd8d31499712bd9105b00aede5d3732b2dea1a0e8b41abb1b0b2e6485c5cb954 SHA512 96b49725da06c2b2b8cb25e202c76e408c1210efcc7a37cf4df99341cf3dfecba12f1c21f62ddcf10ec6e9c5198ef6e0e38b3d43b22e54a0757c9794ee48dc2e
-DIST epson-inkjet-printer-escpr2-1.1.34-1lsb3.2.i486.rpm 2863511 BLAKE2B e034a82f286628bf09b14e298fe22fc98fcace2fc0ee261b2a94480281614e30b475d0846f4b2a0d5c1b40dbe0d73c51d18a98656924899bd443fe60ec855c3a SHA512 b4e8ae821257a67e590a311649ea3fc17d946b844c30ba518cf7ae857f2d5eb0d4d34d51dbc2f22b18676be63520f59258ad6fdcc531f2492a5c8cd41b81d20f
-DIST epson-inkjet-printer-escpr2-1.1.34-1lsb3.2.x86_64.rpm 2862984 BLAKE2B 257c48060f1cd807b650465f83b609d2ce9aab38beaf959327cc147e4675d5b66416d6e4c71c279f3bc830345ee1d8b3113abaaf6c9606553e11b69d8321b151 SHA512 8b4b1d7c69ea81a99daa2da58f50521d82fd28cc2d62eaa4ad2c85cd202a1d1f20f1fcf5cbdefd0516d496c3f1d7808f82d3f69d05c2a993ef3fbb5b591e02b9
 DIST epson-inkjet-printer-escpr2-1.1.35-1lsb3.2.i486.rpm 2905941 BLAKE2B 27334be2588d68531bbcd3ca2dab153d7e6ad19902ccbc3c3cb983fff0762e2080ee2d5ea414c82e717ce1591678eb124a530f223e7d869bbfcdfe1fa46a7f61 SHA512 df852f2b4f91686cd2246fc0f3d2426a524362f734ec477a7e12f5980ae3b9b92b7f8639fc18f9bd8b5554ced346339ef2cc065a055090013cdbc3f61db618c0
 DIST epson-inkjet-printer-escpr2-1.1.35-1lsb3.2.x86_64.rpm 2905389 BLAKE2B 9dbb94a5094521d03e84590295204c7e72392f39268b52de90a1aa0e6943af4bc7650e67799b3684cd9ac9f1fd0bf6d2c374447ee4cc32814d326f22a8108bb7 SHA512 4d2f4423527387521a189e8ac686d207fe231eb0ba6bd92702e9a50e050ade5a2b74860a03c2c9af57cea2f64a5157a0778deedbccc65412e4c18e67ad20fcea
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.33.ebuild 1670 BLAKE2B c4001ef9cad657566e98dfc0bb4ad74c1dc2369f3eff2d602617d711418b1d89b04d93cfec3523d322e94f2d15101b519f3342acbf444d3310d1b53f666c8a11 SHA512 c2c00c03c08001c68d2c8d0dc4ecf808e362c16808fae23c40490d1afc0ee20979916b2f6f265850f882020884c2c8a434af85d752dbf18e96338df9d5e6b10f
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.34.ebuild 1670 BLAKE2B e9965e16b92554678efeae570eb2d03318f1a0a499642cb43a33cbd6d57c78c5a14600e9410ccd4754567b1f586a2462e2dff87c483d515d550c2f0edd99f733 SHA512 a9db477bf2129c8827794ab397962867f7edb9ba1a3da6857b44e3a0edbc52de6f7e7417421e2f3bafce2a728738fcebab4bbe1d1775646373cea738a998cb38
+DIST epson-inkjet-printer-escpr2-1.1.36-1lsb3.2.i486.rpm 2904765 BLAKE2B de73d4899f8ff77ae2f663412c40117efc489f244d89d80f9b8a16c72eb34baa7c4a72427e029e434e3f1b99a19fb70d1278772ad6d6bbf60604d908498d0228 SHA512 426939c70a79f18440031f8705b9c06baade54358ceaf57553177c3d1877b9d9149881566a05358ef85f427d94c0ed1c60a3cee972564d81285c26a64afa345e
+DIST epson-inkjet-printer-escpr2-1.1.36-1lsb3.2.x86_64.rpm 2904324 BLAKE2B 87ca00f387dd9007fc3f0bf8eabe9386e3a57033e5f94e7e46b24cfe068ec769c90728402fd899897d9e0a92d0d489f6eee97155f545e16e32c0d04ab4738acd SHA512 f65b12140f6144a75c656410f839a16902cea18c2cd2132665081378d7ef72cf8d97a5d25b7894b9e475f80b06e9579ec6119e3acca5730e99bd2acb1f93500a
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.35.ebuild 1670 BLAKE2B d5f4297301ddcabb9300154f6599f201d97e418d8572c7da57c57ed5cc9ade824c338270e8974a3a7d1757a0cf3bf2bd854b8bfa7ce19caa8309fbcde35c374e SHA512 c298c04408386d55b5923641b78ca207dce15e6583487cf27fcdc433cd022a4f82d0a969b26ca94e384b0d3c6ec4657d7b30bcc3466489a2d9fee44aadbcb25d
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.36.ebuild 1670 BLAKE2B ffea6ea759137bab9fa47eb497c95f92aea52c5d01010bdf47ea1b77e10ebb43119716b8d58c1570ff15b03012fcdc11143b055a9c162c7e8b16f0f6cfde49c4 SHA512 f78134bac1027e28c70d2a32f0cae7bb6b002d93b293408748ee68dce93c6cbd61cf250a43d996ce64fd29e53b82c3b223cc9a72d2406d49ee6737715fdad6f6
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
