@@ -1,8 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.33.tar.gz 4050097 BLAKE2B 989ba57516d78e5fe1861d9e455e9ff28061e92f7944ae22cbf9f1c5de92aecc849910568e6f4c67f3a4916b2fe3c3a1f3d23feea3de8d9a22399805c00b66ae SHA512 fa14fbf4650a9dcfb89beae5511f2b66e0c87847834c283720e03e4961de7fb2e6d9d8159cacb8cc428dbeddc9e90a97aaedc3f68306978227500d2e24a5da08
-DIST epson-inkjet-printer-escpr2-1.1.34.tar.gz 4098032 BLAKE2B 70d5249a473e1bb4478663d36faaf06deb311491016e1c61f342b6be35fa5fbd0a2da14e3351c32c28aa4be45b28d3c06ec5e1ff142c2a74e74c54e53a6df544 SHA512 6836339d27a5e7946296e27d286f1425d038d03b65428825b77a360c305e171306f979d9dec6e756431e82263792634c5e75d09b969a405e4cec0f1e92455d2b
 DIST epson-inkjet-printer-escpr2-1.1.35.tar.gz 4138135 BLAKE2B f3bd8df830652ed94f6e9da567bd12407ee68ba7b5e629fbccc09f5dd592ce05ec3f5a7718cc76adb718aed2f2a58fb500b509967e44377d1d9d23c2994de3bf SHA512 69d95f235288f2079e59e217e2ab61ed407b6d67fdd1f9ba2bff5bc951afe0d41558d2d245ee642d4560e6dd0047f11afb503b32209e9cda4f7dc330f4f03cc4
-EBUILD epson-inkjet-printer-escpr2-1.1.33.ebuild 1319 BLAKE2B c5ed572c7c69e059f20b2fc552095d04a5ae4b170b6418620857b1df61fc3645656a0135d4c393b4a9129696ec8b2b27721e0e796ee104e6d5b24312f02eaf65 SHA512 1fd197682ca028a5392f198e835190ac5b6e12056076b16e2844897dd9df94ea48887a50ac8e72758ebf6c993be820ff104848081eef380458a9403ff319db0e
-EBUILD epson-inkjet-printer-escpr2-1.1.34.ebuild 1319 BLAKE2B 667fc01b2622585d9f15f0d5184f7f9ced68e80946b6705170c41a6799c97805b5fc0ed3f2684197d1147155e15f2770eba2c223204a36d55c6960ec9b60d3d6 SHA512 bbaaaa3b1318b00c65f655c9df751c32669a93f5e5b4ef8c2ad18538b445eed0094dd0c87c307b9c16bf41f3fd5c87180453595d625e9c00ca7345438baed42c
+DIST epson-inkjet-printer-escpr2-1.1.36.tar.gz 4180392 BLAKE2B 76d3891aa462bcfeadeedc7301758e545cf23f3ed563503746e3d2b6aba6385e6c4d45b5c69ac3957fff47a3a27b13097fef398258b76886e3f0b3281b4f6269 SHA512 0c826bea56840f269cc14473dedfd2c122cbddd06f67e2d4d07e748c8bb52cb6b3269dcf0a3bf99cbf2646c6a561b82804b440db85eeadf658c0edbecec36424
 EBUILD epson-inkjet-printer-escpr2-1.1.35.ebuild 1319 BLAKE2B 1c83ce098607162445e8cf136e3078421cfefc133b51b65e39825ea869fe4a9e8ed1bfbd8e59b51f68b736e18103225197c1149ed6a50adf0a164c3d460f8ccd SHA512 1f2801feb0568ebb4164a48325796ab818b15ed8e474e469e3b251bc187fd766c17a77bafd912c96791f8331b67d3454ecefb17fb552b697b899975d981af492
+EBUILD epson-inkjet-printer-escpr2-1.1.36.ebuild 1319 BLAKE2B fdafb061ce08dd769e6af907e8491c92ec1ddc620b8d2fb0174f785c61716c498d64d64197d486772826d0d0c476f954154574182aace2a25cc2d2738c7c0a1f SHA512 00bcbc2d05d847da91f75b2a59cc8edbd42f4e6c1fb63629fbfa9e8cb933b58e7708682cf61b0e64389b8bb6d5ceb44ac9df6c89c0d7fbb0aa81abee006e03a0
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
